--- a/package.json
+++ b/package.json
@@ -4,25 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "start": "node server.js"
+    "start": "node server"
   },
-  "author": "Marisol Ramirez",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
-    "nanoid": "^3.2.0"
-  },
-  "devDependencies": {
-    "jest": "^27.4.7"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarisolRamirez1031/NoteTaker.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/MarisolRamirez1031/NoteTaker/issues"
-  },
-  "homepage": "https://github.com/MarisolRamirez1031/NoteTaker#readme"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
+  }
 }
